Added code commenting and styling pages.  Added 2nd numerical methods assignment, the coin-toss simulation, with its accompanying template.  Added a monospace font to main.css for elements with the code id.

--- a/main.css
+++ b/main.css
@@ -20,3 +20,7 @@ th, td {
 td.bar {
 	border-right-style: solid;
 }
+
+#code {
+	font-family: "Courier New", Courier, "Lucida Console", Monaco, monospace; 
+}
